--- a/hieradata/role/common/restbase/production_ng.yaml
+++ b/hieradata/role/common/restbase/production_ng.yaml
@@ -285,24 +285,25 @@ profile::cassandra::instances:
 
 profile::cassandra::settings:
   start_rpc: 'false'
-  max_heap_size: 12g
-  # 1/4 heap size, no more than 100m/thread
-  heap_newsize: 2048m
-  compaction_throughput_mb_per_sec: 20
-  concurrent_compactors: 10
-  concurrent_writes: 18
-  concurrent_reads: 18
   tls_cluster_name: "restbase"
-  internode_encryption: dc
   dc: "%{::site}"
   cluster_name: "restbase"
   application_username: restb
   application_password: "%{passwords::cassandra::restbase}"
   target_version: '3.x'
-  permissions_validity_in_ms: 600000
-  trickle_fsync: false
-  client_encryption_enabled: true
-  disk_failure_policy: best_effort
+  default_instance_params:
+    max_heap_size: 12g
+    # 1/4 heap size, no more than 100m/thread
+    heap_newsize: 2048m
+    compaction_throughput_mb_per_sec: 20
+    concurrent_compactors: 10
+    concurrent_writes: 18
+    concurrent_reads: 18
+    internode_encryption: dc
+    permissions_validity_in_ms: 600000
+    trickle_fsync: false
+    client_encryption_enabled: true
+    disk_failure_policy: best_effort
 
 
 #
