Increase max kafka message size for changeprop and kafka main
Some of the jobs in the JobQueue exceed the default 1M
size for kafka brokers, so we need to increase that for
the main cluster.

However, the consumer's settings should be in sync with
the broker setting, so we need to pass that value to CP,
so we need to pull it from hiera in both places.

The hiera usage is not optimal but several FIXME
are placed to remind a refactor when moving to profiles.

Change-Id: Ice77027db74e67c519ce305e99ea22c3ff2c7b07

--- a/hieradata/role/common/kafka/main/broker.yaml
+++ b/hieradata/role/common/kafka/main/broker.yaml
@@ -1,3 +1,5 @@
 debdeploy::grains:
   debdeploy-kafka-main:
     value: standard
+# Used to sync the setting between main kafka cluster and change-prop
+kafka_message_max_bytes: 4194304
