hieradata: bump ProxyFetch timeout for thumbor
With the current nginx reverse proxy setup the selected backend instance
might be legitimately busy servicing other long-running requests before
/healthcheck.

Bug: T172930
Change-Id: I8ed4e4ca075497b47bf5bb5f54f3229089e2a478

--- a/hieradata/common/lvs/configuration.yaml
+++ b/hieradata/common/lvs/configuration.yaml
@@ -981,6 +981,7 @@ lvs::configuration::lvs_services:
       ProxyFetch:
         url:
         - http://localhost/healthcheck
+        timeout: 10
       IdleConnection:
         timeout-clean-reconnect: 3
         max-delay: 300
