--- a/hieradata/role/common/restbase/production_ng.yaml
+++ b/hieradata/role/common/restbase/production_ng.yaml
@@ -65,10 +65,28 @@ profile::cassandra::instances:
   "restbase2001.codfw.wmnet":
     a:
       listen_address: 10.192.16.162
+      data_file_directories:
+        - /srv/sda4/cassandra-a/data
+        - /srv/sdb4/cassandra-a/data
+        - /srv/sdc4/cassandra-a/data
+        - /srv/sdd4/cassandra-a/data
+        - /srv/sde4/cassandra-a/data
     b:
       listen_address: 10.192.16.163
+      data_file_directories:
+        - /srv/sda4/cassandra-b/data
+        - /srv/sdb4/cassandra-b/data
+        - /srv/sdc4/cassandra-b/data
+        - /srv/sdd4/cassandra-b/data
+        - /srv/sde4/cassandra-b/data
     c:
       listen_address: 10.192.16.164
+      data_file_directories:
+        - /srv/sda4/cassanrda-c/data
+        - /srv/sdb4/cassanrda-c/data
+        - /srv/sdc4/cassanrda-c/data
+        - /srv/sdd4/cassanrda-c/data
+        - /srv/sde4/cassanrda-c/data
   # "restbase2003.codfw.wmnet":
   #   a:
   #     listen_address: 10.192.32.134
