ferm: introduce ferm::client
This is the symmetric counterpart to ferm::service to explicitly allow
client traffic and optionally disable connection tracking for such
connections.

Note that at the time of this commit the OUTPUT policy is ALLOW, thus
the rules are always a noop. The define initial usage is to exclude
swift frontend -> backend client traffic from connection tracking,
though keeping the same parameters as ferm::service is more intuitive
and future-proof in case we decide to limit client traffic as well.
Additionally the rules counters provide basic accounting for client
traffic.

Bug: T173731
Change-Id: Ib769f70396062558e7b98e8e3c6c8f643fc959c7

--- a/modules/ferm/files/functions.conf
+++ b/modules/ferm/files/functions.conf
@@ -24,3 +24,30 @@
 		}
 	}
 }
+
+# Explicitly allow client traffic towards a service
+@def &CLIENT($proto, $port) = {
+	domain (ip ip6) chain OUTPUT {
+		proto $proto dport $port ACCEPT;
+	}
+}
+
+@def &R_CLIENT($proto, $port, $drange) = {
+	domain (ip ip6) chain OUTPUT {
+		proto $proto dport $port daddr $drange ACCEPT;
+	}
+}
+
+# Don't track connections for clients of high traffic services
+@def &NO_TRACK_CLIENT($proto, $port) = {
+	domain (ip ip6) {
+		table raw {
+			chain PREROUTING {
+				proto $proto sport $port NOTRACK;
+			}
+			chain OUTPUT {
+				proto $proto dport $port NOTRACK;
+			}
+		}
+	}
+}
