openstack: update keystone template
* Previously removed whitespace for oath stanza, readd
  for consistency
* main deployment ldap list has ldap:// erroneously

Bug: T171494
Change-Id: Ib3ef0c2e6f851f30a17e8e16574bced99ddb0d76

--- a/hieradata/eqiad/profile/openstack/main.yaml
+++ b/hieradata/eqiad/profile/openstack/main.yaml
@@ -3,4 +3,4 @@ profile::openstack::main::nova_controller: 'labcontrol1001.wikimedia.org'
 profile::openstack::main::osm_host: 'wikitech.wikimedia.org'
 profile::openstack::main::rabbit_monitor_user: 'monitoring'
 profile::openstack::main::rabbit_file_handles: 8192
-profile::openstack::main::ldap_hosts: ['ldap://ldap-labs.eqiad.wikimedia.org', 'ldap://ldap-labs.codfw.wikimedia.org']
+profile::openstack::main::ldap_hosts: ['ldap-labs.eqiad.wikimedia.org', 'ldap-labs.codfw.wikimedia.org']
