--- a/modules/install_server/files/autoinstall/netboot.cfg
+++ b/modules/install_server/files/autoinstall/netboot.cfg
@@ -75,7 +75,7 @@ d-i preseed/include_command string  \
         elastic101[7-9]|elastic102[0-9]|elastic103[0-1]) echo partman/elasticsearch-raid0.cfg ;; \
         elastic103[2-9]|elastic104[0-9]|elastic105[0-2]) echo partman/raid1-lvm-ext4-srv-noswap.cfg ;; \
         elastic20[0-2][0-9]|elastic203[0-6]) echo partman/raid1-lvm-ext4-srv-noswap.cfg ;; \
-        labcontrol100[34]|labmon1001|mwlog[12]001|relforge100[12]|scb200[1-6]|stat100[56]) echo partman/raid10-gpt-srv-lvm-ext4.cfg ;; \
+        labcontrol100[34]|labmon100[12]|mwlog[12]001|relforge100[12]|scb200[1-6]|stat100[56]) echo partman/raid10-gpt-srv-lvm-ext4.cfg ;; \
         analytics1003|cobalt|thorium) echo partman/raid10-gpt-srv-lvm-ext4.cfg ;; \
         acrab|acrux|actinium|alcyone|aluminium|argon|chlorine|bromine|bohrium|darmstadtium|dbmonitor[12]001|dubnium|etcd100[1-6]|etherpad[12]001|fermium|hassaleh|hassium|krypton|kubetcd[12]00[1-3]|meitnerium|mendelevium|mwdebug100[12]|netmon1003|releases[12]001|nihal|nitrogen|planet[12]001|pollux|roentgenium|rutherfordium|sca[12]00[34]|seaborgium|serpens|tureis|alsafi|kraz|install[12]00[12]|ununpentium|zosma) echo partman/flat.cfg virtual.cfg ;; \
         diadem|dysprosium) echo partman/flat.cfg virtual.cfg ;; \
