start of setup of dumpsdata hosts
These hosts provide a scratch area for dumps generation,
via nfs mounts to the dumps snapshot hosts. They also will rsync
this data over to the dataset server hosts and later to the
replacements for the datasets.

This changeset is the first step only: nfs service.

Note that eventually the dataset server manifests will be converted
to reuse dumpsnfs and other modules yet to be added.

Bug: T169849
Change-Id: I2cc59df6713ba8b479f73c7c0310c5604ea21381

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -307,6 +307,11 @@ dataset_clients_other:
   - stat1003.eqiad.wmnet
   - stat1005.eqiad.wmnet
   - stat1006.eqiad.wmnet
+dumps_clients_snapshots:
+  - snapshot1001.eqiad.wmnet
+  - snapshot1005.eqiad.wmnet
+  - snapshot1006.eqiad.wmnet
+  - snapshot1007.eqiad.wmnet
 
 # Schemas names that match this regex
 # will not be produced to the eventlogging-valid-mixed
