--- a/hieradata/codfw/profile/openstack/labtestn.yaml
+++ b/hieradata/codfw/profile/openstack/labtestn.yaml
@@ -1,5 +1,6 @@
 profile::openstack::labtestn::version: 'liberty'
 profile::openstack::labtestn::nova_controller: 'labtestcontrol2003.wikimedia.org'
+profile::openstack::labtestn::nova_controller_standby: ''
 profile::openstack::labtestn::rabbit_monitor_user: 'monitoring'
 profile::openstack::labtestn::rabbit_file_handles: 8192
 profile::openstack::labtestn::osm_host: 'labtestnwikitech.wikimedia.org'
