--- a/hieradata/common/profile/openstack/base/keystone.yaml
+++ b/hieradata/common/profile/openstack/base/keystone.yaml
@@ -2,4 +2,5 @@ profile::openstack::base::keystone::db_name: 'keystone'
 profile::openstack::base::keystone::db_user: 'keystone'
 profile::openstack::base::keystone::auth_protocol: 'http'
 profile::openstack::base::keystone::auth_port: '35357'
+profile::openstack::base::keystone::public_port: '5000'
 profile::openstack::base::keystone::wiki_status_page_prefix: 'Nova_Resource:'
