two new ldap users sharvaniharan and Cooltey
Adding in two new engineers, Cooltey Feng and Sharvani Haran (LDAP users
Cooltey and Sharvaniharan) recently started on the Android app team.
they'll be granted the wmf flag after merge of this patchset

Bug: T173874
Change-Id: I459661bc702ae94b847c8c317909457e0c947f62

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2710,3 +2710,11 @@ ldap_only_users:
     ensure: present
     realname: Zachary McCune
     email: zmccune@wikimedia.org
+  cooltey:
+    ensure: present
+    realname: Cooltey Feng
+    email: cfeng@wikimedia.org
+  sharvaniharan:
+    ensure: present
+    realname: Sharvani Haran
+    email: sharan@wikimedia.org
