--- a/hieradata/hosts/cp1008.yaml
+++ b/hieradata/hosts/cp1008.yaml
@@ -8,3 +8,5 @@ cache::text::nodes:
       - 'cp1008.wikimedia.org'
     codfw:
       - 'cp1008.wikimedia.org'
+
+profile::base::notifications_enabled: '0'
