WIP: Allow silencing notifications for hosts
Add a notifications_enabled parameter to monitoring::host and
monitoring::service, defaulting to 1. This is passed straight to the
nagios_host and nagios_service resource respectively allowing to
selectively have disabled notification on a per host level. In the case
of monitoring::host the aforementioned parameter gets passed directly
from profile::base, effectively curbing the extent of this patch only to
puppet enabled hosts. This protects all "virtual" hosts (e.g. LVS) from
being accidentaly silenced. On the monitoring::service side, things are
not so easy since that define is used in a myriad places. Instead of
violating our puppet coding policy and adding one more hiera lookup in a
module class, lookup directly $::profile::base::notifications_enabled
instead, then safeguard it in the case it's not defined

There is one caveat with this approach. Setting the hiera parameter on
the icinga host level will cause all virtual host (e.g. LVS) bound
services to be silenced.

TODO: Actually create an event handler

Bug: T151632
Change-Id: I3047d9421c035c7004ca42b248f584216b8e5bdb

--- a/hieradata/hosts/cp1008.yaml
+++ b/hieradata/hosts/cp1008.yaml
@@ -8,3 +8,5 @@ cache::text::nodes:
       - 'cp1008.wikimedia.org'
     codfw:
       - 'cp1008.wikimedia.org'
+
+profile::base::notifications_enable: '0'
