adding user mnoor to ldap users in admin module
WMF staff Moska Noor added to ldap users, so we can assign them the wmf
flag in ldap

Bug: T164285
Change-Id: I7590483b39b21555f19c4da2da76fe2074bc77d8

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2710,3 +2710,7 @@ ldap_only_users:
     ensure: present
     realname: Zachary McCune
     email: zmccune@wikimedia.org
+  mnoor:
+    ensure: present
+    realname: Moska Noor
+    email: mnoor@wikimedia.org
