further tweaking of kafka-jumbo recipe
partman aint easy

Change-Id: Id52139a1504e1aae3c3cd998592347617d9e6c43

--- a/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
+++ b/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
@@ -1,16 +1,15 @@
 # configuration to create:
-#  * no RAID (either single disk or hardware raid presenting a single device)
-#  * 40G /
-#  * the rest formatted with LVM with 90% used
-#  ** the rest as ext4 on /srv
-#  ** 10% empty space for later growth
+#  * hardware raid on kafka-jumbo hosts
+#  * sda raid1: 2 * 1TB mounted as /
+#  * sdb raid10: 12 * 4TB in 90% lvm as /srv
+#  ** 10% empty space for later/emergency growth
 
 
 d-i	partman-auto/method	string	lvm
 d-i	partman-auto/disk	string	/dev/sda /dev/sdb
 
 # the install makes sure we want to wipe the lvm
-d-i	partman-lvm/device_remove_lvm	boolean	false
+d-i	partman-lvm/device_remove_lvm	boolean	true
 d-i	partman-lvm/confirm	boolean	true
 d-i	partman-lvm/confirm_nooverwrite	boolean	true
 d-i	partman/confirm	boolean	true
@@ -18,7 +17,7 @@ d-i	partman/confirm	boolean	true
 # standardize vg name for snapshots (otherwise uses hostname)
 d-i	partman-auto-lvm/new_vg_name string tank
 
-d-i	partman-auto/expert_recipe	string	es ::	\
+d-i	partman-auto/expert_recipe	string	\
 		40000 40000 40000 ext4		\
 			$primary{ }		\
 			$bootable{ }		\
@@ -29,17 +28,19 @@ d-i	partman-auto/expert_recipe	string	es ::	\
 			filesystem{ ext4 }	\
 			mountpoint{ / } 	\
 		.				\
-		64 1000 10000000 xfs		\
+		64 1000 10000000 ext4		\
 			lv_name{ data }		\
 			$defaultignore{ }	\
 			$lvmok{ }		\
 			mountpoint{ /srv }	\
 			device{ /dev/sdb }	\
+			use_filesystem{ }	\
+			filesystem{ ext4 }	\
 			options/nobarrier { nobarrier } \
 			options/noatime { noatime } \
 		.
 
-d-i	partman-auto-lvm/guided_size	string	87%
+d-i	partman-auto-lvm/guided_size	string	90%
 
 d-i	partman/choose_partition	\
 		select	finish
@@ -47,3 +48,4 @@ d-i	partman-partitioning/confirm_write_new_label	boolean	true
 
 d-i	partman-auto/choose_recipe	es
 d-i	partman/confirm_nooverwrite	boolean	true
+partman-basicfilesystems partman-basicfilesystems/no_swap boolean false
