install_server: add partman for cassandra JBOD
Note the individual filesystems on the "big" partition that's used for
JBOD are only formatted by partman, not mounted. partman doesn't seem to
support string interpolation for the mountpoint specification in
recipes, we'll need to mount and add entries to fstab via puppet.

Bug: T169939
Change-Id: Iada7cb4e472bf6b27357f3ccec6410f9a3e4c996

--- a/modules/install_server/files/autoinstall/netboot.cfg
+++ b/modules/install_server/files/autoinstall/netboot.cfg
@@ -151,11 +151,13 @@ d-i preseed/include_command string  \
         rdb100[5-6]|wdqs100[45]) echo partman/raid1-lvm-ext4-srv-noswap.cfg ;; \
         rdb100[7-8]) echo partman/raid1.cfg ;; \
         rdb200[1-6]) echo partman/raid1-lvm-ext4-srv.cfg ;; \
-        restbase100[0-9]) echo partman/cassandrahosts-5ssd.cfg ;; \
-        restbase101[0-5]) echo partman/cassandrahosts-5ssd.cfg ;; \
+        restbase100[0-7]) echo partman/cassandrahosts-5ssd.cfg ;; \
+        restbase100[89]|restbase1010) echo partman/cassandrahosts-5ssd-jbod.cfg ;; \
+        restbase101[1-5]) echo partman/cassandrahosts-5ssd.cfg ;; \
         restbase101[6-8]|restbase-dev100[456]) echo partman/cassandrahosts-4ssd.cfg ;; \
         restbase-test2*)  echo partman/cassandrahosts-2ssd.cfg ;; \
-        restbase200[1-6]) echo partman/cassandrahosts-5ssd.cfg ;; \
+        restbase200[135]) echo partman/cassandrahosts-5ssd-jbod.cfg ;; \
+        restbase200[246]) echo partman/cassandrahosts-5ssd.cfg ;; \
         restbase200[7-9]) echo partman/cassandrahosts-4ssd.cfg ;; \
         restbase201[0-2]) echo partman/cassandrahosts-4ssd.cfg ;; \
         rhenium) echo partman/raid1-gpt.cfg ;; \
