--- a/modules/rabbitmq/files/rabbitmq.config
+++ b/modules/rabbitmq/files/rabbitmq.config
@@ -249,7 +249,7 @@
    %% persistent and transient) to disk as quickly
    %% as possible, see http://www.rabbitmq.com/lazy-queues.html.
    %%
-   %% {vm_memory_high_watermark_paging_ratio, 0.5},
+   {vm_memory_high_watermark_paging_ratio, 0.8}
 
    %% Selects Erlang VM memory consumption calculation strategy. Can be `rss` or `erlang`,
    %% `rss` is the default. Introduced in 3.6.11.
