ferm: add return traffic for ferm::client notrack
Bug: T173731
Change-Id: Ibf0e7783ff0ef4bbb3132d520f841c98533242d1

--- a/modules/ferm/files/functions.conf
+++ b/modules/ferm/files/functions.conf
@@ -39,6 +39,7 @@
 }
 
 # Don't track connections for clients of high traffic services
+# The INPUT rules are needed for return traffic now.
 @def &NO_TRACK_CLIENT($proto, $port) = {
 	domain (ip ip6) {
 		table raw {
@@ -47,6 +48,30 @@
 			}
 			chain OUTPUT {
 				proto $proto dport $port NOTRACK;
+			}
+		}
+		table filter {
+			chain INPUT {
+				proto $proto sport $port ACCEPT;
+			}
+		}
+	}
+}
+
+# Service destination address range case
+@def &NO_TRACK_R_CLIENT($proto, $port, $drange) = {
+	domain (ip ip6) {
+		table raw {
+			chain PREROUTING {
+				proto $proto sport $port srange $drange NOTRACK;
+			}
+			chain OUTPUT {
+				proto $proto dport $port drange $drange NOTRACK;
+			}
+		}
+		table filter {
+			chain INPUT {
+				proto $proto sport $port srange $drange ACCEPT;
 			}
 		}
 	}
