--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -221,7 +221,7 @@ labtest:
   labs_nova_network_ip: &labsnovanetworkip "10.192.20.5"
   status_wiki_host_master: 'labtestwikitech.wikimedia.org'
   labs_glance_controller: &labsglancecontroller "labtestcontrol2001.wikimedia.org"
-  labs_puppet_master: &labspuppetmaster "labtestcontrol2001.wikimedia.org"
+  labs_puppet_master: &labspuppetmaster "labtestpuppetmaster2001.wikimedia.org"
   labs_keystone_host: &labskeystonehost "labtestcontrol2001.wikimedia.org"
   wikitech_db_name: 'labtestwiki'
   labs::dns::gridmaster::monitor: false
