thumbor: increase check timeout
Thumbor requests can legitimately take >10s, including /healthcheck when
thumbor instances are busy. Another option would be to increase the
number of icinga retries for SOFT -> HARD state transition, though ATM
there doesn't seem to be a good way to do that only for one LVS service.

Bug: T172930
Change-Id: Ife4c615202efc2812434cd89bc33eba4e819e561

--- a/modules/nagios_common/files/checkcommands.cfg
+++ b/modules/nagios_common/files/checkcommands.cfg
@@ -343,6 +343,11 @@ define command {
     }
 
 define command {
+    command_name    check_http_lvs_on_port_timeout
+    command_line    $USER1$/check_http -H $ARG1$ -p $ARG2$ -I $HOSTADDRESS$ -u "$ARG3$" -t "$ARG4$"
+    }
+
+define command {
     command_name    check_ssh
     command_line    $USER1$/check_ssh $HOSTADDRESS$
     }
