--- a/hieradata/common/lvs/configuration.yaml
+++ b/hieradata/common/lvs/configuration.yaml
@@ -988,7 +988,7 @@ lvs::configuration::lvs_services:
       cluster: thumbor
       service: thumbor
     icinga:
-      check_command: "check_http_lvs_on_port!thumbor.svc.%{::site}.wmnet!8800!/healthcheck"
+      check_command: "check_http_lvs_on_port_timeout!thumbor.svc.%{::site}.wmnet!8800!/healthcheck!20"
       sites:
         eqiad:
           hostname: thumbor.svc.eqiad.wmnet
