--- a/hieradata/role/common/wdqs.yaml
+++ b/hieradata/role/common/wdqs.yaml
@@ -15,3 +15,6 @@ debdeploy::grains:
     value: standard
 role::lvs::realserver::pools:
   wdqs: {}
+
+# Use the future parser here
+profile::base::environment: "future"
