icinga: add -u option to check_nrpe commands
Adding -u option to check_nrpe calls will make socket timeouts return an
unknown state instead of critical.  This should help to reduce flurries of
false/noop critical service alerts during events like reboots, reimages, etc.

Bug: T172131
Change-Id: I27f99fae7ab5744858dd68f5315729ba53faa24f

--- a/modules/nagios_common/files/checkcommands.cfg
+++ b/modules/nagios_common/files/checkcommands.cfg
@@ -358,15 +358,15 @@ define command {
 }
 define command {
     command_name    nrpe_check_dpkg
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_dpkg
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_dpkg
 }
 define command {
     command_name    nrpe_check_udp2log_log_age
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_udp2log_log
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_udp2log_log
 }
 define command {
     command_name    nrpe_check_udp2log_procs
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_udp2log_procs
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_udp2log_procs
 }
 define command {
     command_name    check_eventlogging_jobs
@@ -378,7 +378,7 @@ define command {
 # ARG2: timeout in seconds
 define command {
     command_name    nrpe_check
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c $ARG1$ -t $ARG2$
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c $ARG1$ -t $ARG2$
 }
 
 define command {
@@ -437,42 +437,42 @@ define command {
 # percona mysql checks
 define command {
     command_name    nrpe_check_lvs
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_lvs
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_lvs
 }
 
 define command {
     command_name    nrpe_check_mysql_idle_transactions
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_mysql_idle_transactions
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_mysql_idle_transactions
 }
 
 define command {
     command_name    nrpe_check_mysql_recent_restart
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_mysql_recent_restart
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_mysql_recent_restart
 }
 
 define command {
     command_name    nrpe_check_mysql_slave_running
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_mysql_slave_running
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_mysql_slave_running
 }
 
 define command {
     command_name    nrpe_check_mysql_slave_delay
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_mysql_slave_delay
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_mysql_slave_delay
 }
 
 define command {
     command_name    nrpe_check_mysql_slave_heartbeat
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_mysql_slave_heartbeat
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_mysql_slave_heartbeat
 }
 
 define command {
     command_name    nrpe_pmp_check_mysql_processlist
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c pmp_check_mysql_processlist
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c pmp_check_mysql_processlist
 }
 
 define command {
     command_name    nrpe_pmp_check_mysql_innodb
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c pmp_check_mysql_innodb
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c pmp_check_mysql_innodb
 }
 
 # end percona mysql checks
@@ -503,7 +503,7 @@ define command {
 # check Online Content Generator health from server health page
 define command {
     command_name    nrpe_check_ocg_health
-    command_line    $USER1$/check_nrpe -H $HOSTADDRESS$ -c check_ocg_health
+    command_line    $USER1$/check_nrpe -u -H $HOSTADDRESS$ -c check_ocg_health
 }
 
 # custom command to check phabricator behind misc-web
