--- a/hieradata/role/common/elasticsearch/cirrus.yaml
+++ b/hieradata/role/common/elasticsearch/cirrus.yaml
@@ -30,3 +30,6 @@ profile::elasticsearch::search_shard_count_limit: 5000
 # We have seen (T169498) servers completely exhaust their CPU though, so setting
 # this to match cpu counts to prevent overcommit of CPU resources.
 profile::elasticsearch::search_thread_pool_executors: 32
+
+# Use the future parser here
+profile::base::environment: "future"
