--- a/hieradata/role/common/elasticsearch/relforge.yaml
+++ b/hieradata/role/common/elasticsearch/relforge.yaml
@@ -26,3 +26,6 @@ profile::elasticsearch::reindex_remote_whitelist: 'search.svc.eqiad.wmnet:9243,s
 # We have seen (T169498) servers completely exhaust their CPU though, so setting
 # this to match cpu counts to prevent overcommit of CPU resources.
 profile::elasticsearch::search_thread_pool_executors: 32
+
+# Use the future parser here
+profile::base::environment: "future"
