--- a/modules/mediawiki/files/apache/sites/remnant.conf
+++ b/modules/mediawiki/files/apache/sites/remnant.conf
@@ -404,4 +404,13 @@
     Include "sites-enabled/wikimedia-common.incl"
 </VirtualHost>
 
+# Election Committee (private)
+<VirtualHost *:80>
+    ServerName electcom.wikimedia.org
+
+    RewriteEngine On
+    Rewritecond %{HTTP:X-Forwarded-Proto} !https
+    RewriteRule ^/(.*)$ https://electcom.wikimedia.org/$1 [R=301,L,NE]
+    Include "sites-enabled/wikimedia-common.incl"
+</VirtualHost>
 ## donatewiki has been moved to main.conf so it can catch donate.wikipedia.org
