further tweaking of kafka-jumbo.cfg
tweaking the partman recipe

Change-Id: I59d2174d0d4c57eda1a46f198bf7140262089ea0

--- a/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
+++ b/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
@@ -14,11 +14,8 @@ d-i	partman-lvm/confirm	boolean	true
 d-i	partman-lvm/confirm_nooverwrite	boolean	true
 d-i	partman/confirm	boolean	true
 
-# standardize vg name for snapshots (otherwise uses hostname)
-d-i	partman-auto-lvm/new_vg_name string tank
-
 d-i	partman-auto/expert_recipe	string	\
-		40000 40000 40000 ext4		\
+		40000 40000 12000000 ext4		\
 			$primary{ }		\
 			$bootable{ }		\
 			method{ format }	\
