copy of completed dump files plus metadata from dumpsdata to web server
[WIP] Not even completely written, certainly not tested, etc.
Plus we will need to add the rsync of the dumps produced
by weekly/daily cron jobs too.

Bug: T169849
Change-Id: I6b14108e3809a1fe0f0a978259297f6b980cb85f

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -298,6 +298,7 @@ statistics_servers:
   - stat1006.eqiad.wmnet
   - dataset1001.wikimedia.org
   - thorium.eqiad.wmnet
+
 dataset_clients_snapshots:
   - snapshot1001.eqiad.wmnet
   - snapshot1005.eqiad.wmnet
@@ -307,11 +308,17 @@ dataset_clients_other:
   - stat1003.eqiad.wmnet
   - stat1005.eqiad.wmnet
   - stat1006.eqiad.wmnet
+
 dumps_clients_snapshots:
   - snapshot1001.eqiad.wmnet
   - snapshot1005.eqiad.wmnet
   - snapshot1006.eqiad.wmnet
   - snapshot1007.eqiad.wmnet
+dumps_webservers:
+  - dataset1001.wikimedia.org
+  - ms1001.wikimedia.org
+dumpsdata_secondaries:
+  - dumpsdata1002.eqiad.wmnet
 
 # Schemas names that match this regex
 # will not be produced to the eventlogging-valid-mixed
