Synchronize message.max.bytes between all kafka clusters and producers
This is causing mirror maker from main-eqiad -> analytics to fail,
which is keeping EventStreams topics from being replicated!

Change-Id: I3e5f125f362d350194a07e02147e3276ba528a2c

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -421,6 +421,8 @@ zookeeper_clusters:
       druid1002.eqiad.wmnet: '1002'
       druid1003.eqiad.wmnet: '1003'
 
+# Used to sync the setting between all Kafka clusters and clients.
+kafka_message_max_bytes: 4194304
 
 kafka_clusters:
   # This is the analytics Kafka cluster, named just 'eqiad' for
