further tweaks to kafka-jumbo
these most recent tweaks have the /srv mounting properly on sdb, but sda
still generates an lvm (when it should simply be a / partition taking up
the entire hw raid1 generated sda)

Bug: T174457
Change-Id: If9d6ec155faa6d50d4ba0f8df77a67da47149fe9

--- a/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
+++ b/modules/install_server/files/autoinstall/partman/kafka-jumbo.cfg
@@ -29,6 +29,8 @@ d-i	partman-auto/expert_recipe	string	\
 			lv_name{ data }		\
 			$defaultignore{ }	\
 			$lvmok{ }		\
+			method{ format }	\
+			format{ }		\
 			mountpoint{ /srv }	\
 			device{ /dev/sdb }	\
 			use_filesystem{ }	\
@@ -43,6 +45,5 @@ d-i	partman/choose_partition	\
 		select	finish
 d-i	partman-partitioning/confirm_write_new_label	boolean	true
 
-d-i	partman-auto/choose_recipe	es
 d-i	partman/confirm_nooverwrite	boolean	true
 partman-basicfilesystems partman-basicfilesystems/no_swap boolean false
