kubernetes: Refactor/add admission controllers
Migrate away from the disjoint structure of an array for the admission
controllers and separate parameters for their configuration to a more
tightly coupled structure where admission controllers are specified as a
Hash with keys the admission controller names and values their
respective parameters. That allows for greater flexibility and decouples
the definition of the class from the implementation details of the
controllers and their parameters.

Amend the roles for production, staging as well as labs to keep the
status quo.

There is one glaring difference in production/staging, that
is we no longer enforce the registry. That is expected to be enforced
later on if possible via the dynamic admission controllers, but even now
it is not an immediate issue due to the networking policies we have in
place.

Bug: T170119
Change-Id: Ie960a72da62b12beca2408e1b5028ea50ef3d5d5

--- a/hieradata/role/common/kubernetes/master.yaml
+++ b/hieradata/role/common/kubernetes/master.yaml
@@ -2,22 +2,18 @@ debdeploy::grains:
   debdeploy-kubernetes-eqiad:
     value: standard
 cluster: kubernetes
-profile::kubernetes::master::docker_registry: darmstadtium.eqiad.wmnet
 profile::kubernetes::master::accessible_to: all
 profile::kubernetes::master::apiserver_count: 2
 profile::kubernetes::master::admission_controllers:
- - NamespaceLifecycle
- - ResourceQuota
- - LimitRanger
- - RegistryEnforcer
- - DefaultStorageClass
+  NamespaceLifecycle: ''
+  LimitRanger: ''
+  DefaultStorageClass: ''
+  ResourceQuota: ''
 profile::kubernetes::master::expose_puppet_certs: true
 profile::kubernetes::master::service_cert: "kubemaster.svc.%{::site}.wmnet"
 profile::kubernetes::master::ssl_cert_path: "/etc/ssl/localcerts/kubemaster.svc.%{::site}.wmnet.crt"
 profile::kubernetes::master::ssl_key_path: "/etc/ssl/private/kubemaster.svc.%{::site}.wmnet.key"
 profile::kubernetes::master::authz_mode: ''
-profile::kubernetes::master::host_automounts: []
-profile::kubernetes::master::host_path_prefixes_allowed: []
 # TODO: This needs to become a profile
 role::lvs::realserver::pools:
   kubemaster: {}
