--- a/hieradata/labs/integration/common.yaml
+++ b/hieradata/labs/integration/common.yaml
@@ -13,3 +13,7 @@ contint::zuul_merger_hosts:
     - '::1'  # uses quotes for hiera
     - 127.0.0.1
 puppetmaster::autosigner: true
+
+# Instance is aptly.integration.eqiad.wmflabs
+role::aptly::client::servername: integration-aptly.wmflabs.org
+role::aptly::client::components: 'php55'
