contint: aptly server in labs
Intended to host Zend PHP 5.5 Debian packages for Jessie.

Bug: T161882
Change-Id: I187d738ac1759907d2b3a01c9be62ca6768877c1

--- a/hieradata/labs/integration/common.yaml
+++ b/hieradata/labs/integration/common.yaml
@@ -13,3 +13,5 @@ contint::zuul_merger_hosts:
     - '::1'  # uses quotes for hiera
     - 127.0.0.1
 puppetmaster::autosigner: true
+
+role::aptly::client::servername: aptly.integration.eqiad.wmflabs
