Give ores-admin users lsof, rather than the deployment user
Change-Id: I1d0d14c8fb0c968f65ecc67b2f112a3813b393df

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -550,7 +550,8 @@ groups:
     gid: 782
     members: [awight, halfak, ladsgroup]
     privileges: ['ALL = NOPASSWD: /usr/sbin/service uwsgi-ores *',
-                 'ALL = NOPASSWD: /usr/sbin/service celery-ores-worker *']
+                 'ALL = NOPASSWD: /usr/sbin/service celery-ores-worker *',
+                 'ALL = NOPASSWD: /usr/bin/lsof *']
   sectools-roots:
     description: root access on servers for security tools
     gid: 783
