--- a/hieradata/labs/integration/common.yaml
+++ b/hieradata/labs/integration/common.yaml
@@ -14,5 +14,6 @@ contint::zuul_merger_hosts:
     - 127.0.0.1
 puppetmaster::autosigner: true
 
-role::aptly::client::servername: aptly.integration.eqiad.wmflabs
+role::aptly::client::protocol: 'https'
+role::aptly::client::servername: integration-aptly.wmflabs.org
 role::aptly::client::components: 'php55'
